# SSE-SEAL

./: .gitignore  Makefile  README.md  TODO
ODICT/: Makefile  test_client  test_server  test_sm4
ODICT/include/: Block.h  Bucket.h  Client.h  ClientCache.h  Objects.h  OramAccessController.h  OramDeterministic.h  OramInterface.h  OramReadPathEviction.h  PathORAM.h  RandForOramInterface.h  RandomForOram.h  ServerStorage.h  StashSizeSimulator.h  UntrustedStorageInterface.h  csprng.h  csprng.hpp  is_iterable.hpp  utils.h
ODICT/include/client/: Client.h  ClientCache.h  ClientRunner.h  Objects.h  (+1 more)
ODICT/input/: test.txt
ODICT/log/: log.txt
ODICT/protos/: seal.proto
ODICT/src/: Block.cpp  Bucket.cpp  Client.cpp  Connector.cpp  Objects.cpp  OramAccessController.cpp  OramDeterministic.cpp  OramReadPathEviction.cpp  RandomForOram.cpp  ServerStorage.cpp  csprng.cpp  main.cpp  utils.cpp
ODICT/test/: main.cpp  test_client.cpp  test_server.cpp
include/: Connector.h  utils.h
include/client/: Client.h  ClientCache.h  ClientRunner.h
include/oram/: Block.h  OramInterface.h  PathORAM.h  RandomForOram.h  UntrustedStorageInterface.h
include/proto/: seal.grpc.pb.h
input/: test.csv
keys/: server.crt
project/: CMakeLists.txt  Makefile  common.cmake  showall.txt  test  test_server
project/include/: Connector.h  is_iterable.hpp  utils.h
project/include/client/: Client.h  ClientCache.h  ClientRunner.h  Objects.h  OramAccessController.h
project/include/crypto/: sm4.h
project/include/oram/: Block.h  Bucket.h  OramInterface.h  OramReadPathEviction.h  OramStruct.h  RandForOramInterface.h  ServerStorage.h
project/include/proto/: seal.grpc.pb.h  seal.pb.h
project/include/server/: SealServerRunner.h  SealService.h
project/input/: test.csv  test.txt
project/keys/: server.key
project/log/: log.txt
project/protos/: seal.proto
project/src/: Connector.cpp  csprng.cpp  utils.cpp
project/src/client/: Client.cpp  ClientRunner.cpp  Objects.cpp  OramAccessController.cpp
project/src/crypto/: sm4.cpp
project/src/oram/: Block.cpp  Bucket.cpp  OramReadPathEviction.cpp  RandomForOram.cpp  ServerStorage.cpp
project/src/protos/: seal.grpc.pb.cpp  seal.pb.cpp
project/src/server/: SealServerRunner.cpp  SealService.cpp
project/src/test/: main.cpp  test_log.cpp
protos/: seal.proto
src/client/: Client.cpp
src/oram/: Block.cpp  Bucket.cpp
src/protos/: seal.grpc.pb.cpp
src/test/: test_server.cpp
(+32 files in other folders)
